--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3CBCF5</color>
     <color name="colorPrimaryDark">#3CBCF5</color>
     <color name="colorAccent">#3CBCF5</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 </resources>
