--- a/app/src/main/res/layout/float_controls_fragment.xml
+++ b/app/src/main/res/layout/float_controls_fragment.xml
@@ -18,7 +18,7 @@
         android:background="@drawable/round_button"
         android:backgroundTint="#FFFFFF"
         android:longClickable="true"
-        android:padding="10dp"
+        android:padding="12dp"
         android:src="@drawable/ic_lightbulb_outline_black_24dp"
         android:tint="#000000"
         app:layout_constraintEnd_toStartOf="@+id/brightness_seekBar"
@@ -35,6 +35,7 @@
         android:paddingTop="12dp"
         android:paddingBottom="12dp"
         android:progress="1"
+        android:progressTint="@color/white"
         android:thumb="@drawable/ic_brightness_low_white_24dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageButton"
         app:layout_constraintEnd_toEndOf="parent"
