--- a/app/src/main/res/layout-land/activity_float_controls.xml
+++ b/app/src/main/res/layout-land/activity_float_controls.xml
@@ -9,11 +9,12 @@
 
 
     <FrameLayout
-        android:layout_width="729dp"
-        android:layout_height="409dp"
+        android:layout_width="7290dp"
+        android:layout_height="4090dp"
         android:layout_marginStart="1dp"
         android:layout_marginTop="1dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="1dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -26,12 +27,13 @@
                 android:name="de.wudke.lightswitch.floatControls.FloatControlsFragment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.120000005"
+                app:layout_constraintVertical_bias="0.0"
                 tools:layout="@layout/float_controls_fragment" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
