added UI for advanced controls backend work for QuickActions reworked HAUtils

--- a/app/src/main/res/layout/activity_float_controls.xml
+++ b/app/src/main/res/layout/activity_float_controls.xml
@@ -21,7 +21,7 @@
 
             <fragment
                 android:id="@+id/fragment"
-                android:name="de.wudke.lightswitch.floatControls.FloatControlsFragment"
+                android:name="de.wudke.lightswitch.floatControls.FloatControlsAdvancedFragment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
@@ -31,7 +31,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0"
-                tools:layout="@layout/float_controls_fragment" />
+                tools:layout="@layout/float_controls_advanced_fragment" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </FrameLayout>
