--- a/app/src/main/res/layout/float_controls_fragment.xml
+++ b/app/src/main/res/layout/float_controls_fragment.xml
@@ -13,6 +13,7 @@
     <ImageButton
         android:id="@+id/imageButton_toggle_light"
         style="@style/Widget.AppCompat.ImageButton"
+        android:foreground="@drawable/ripple_btn_background"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/round_button"
