--- a/app/src/main/res/layout/float_controls_advanced_fragment.xml
+++ b/app/src/main/res/layout/float_controls_advanced_fragment.xml
@@ -51,13 +51,13 @@
     <ImageButton
         android:id="@+id/imageButton_open_settings"
         style="@style/Widget.AppCompat.ImageButton"
-        android:foreground="@drawable/ripple_btn_background"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/round_button"
         android:backgroundTint="#FFFFFF"
         android:contentDescription="@string/floatcontrols_open_settings_descriptiongoto_settings"
+        android:foreground="@drawable/ripple_btn_background"
         android:longClickable="false"
         android:padding="12dp"
         android:src="@drawable/ic_baseline_settings_24"
@@ -88,11 +88,11 @@
         android:id="@+id/recyclerView_quickActions"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:backgroundTint="@color/cardview_dark_background"
         android:requiresFadingEdge="none"
         android:scrollbarThumbVertical="@android:color/darker_gray"
         android:scrollbars="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/imageButton_open_ha"
         app:layout_constraintEnd_toEndOf="@+id/brightness_seekBar"
         app:layout_constraintStart_toStartOf="@+id/imageButton_toggle_light"
         app:layout_constraintTop_toBottomOf="@+id/brightness_seekBar" />
